--- a/bin/todo
+++ b/bin/todo
@@ -17,3 +17,5 @@ set -e
 
 # Run our new web 2.0 todo list application and raise millions of VC dollars.
 touch ~/Desktop/"$*"
+
+# TODO: Add a reminder using google calendar API
